<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".ui.addstory.AddStoryActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_add_description"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/deskripsi_cerita"
        android:textColorHint="?attr/colorOnTertiary"
        android:textColor="?attr/colorOnTertiary"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLines="5" />


    <Button
        android:id="@+id/tambah_gambar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@id/ed_add_description"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/tambah_gambar"
        />

    <Button
        android:id="@+id/ambil_gambar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@id/ed_add_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/take_photo"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_add_photo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tambah_gambar"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="?attr/colorOnTertiary"
        app:strokeWidth="4dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_cerita"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toBottomOf="@id/iv_add_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnTertiary"
        app:layout_constraintTop_toBottomOf="@id/button_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sertakan_lokasi"
        android:buttonTint="?attr/colorOnTertiary"

        />

</androidx.constraintlayout.widget.ConstraintLayout>
