<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_four"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.register.RegisterActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Create_an_Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/buat_akun"

        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:hint="@string/email"
        android:textColorHint="?attr/colorOnTertiary"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/Create_an_Account"


        app:placeholderText="example@gmail.com">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="?attr/colorOnTertiary" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Box Text Input Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPasswordLayout"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textColorHint="?attr/colorOnTertiary"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputUsername"
        app:placeholderText="Create a Password">


        <com.clerami.intermediate.ui.customview.EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textColor="?attr/colorOnTertiary" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_must_atleast_be_8_characters_long"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/textInputPasswordLayout"
        app:layout_constraintTop_toBottomOf="@id/textInputPasswordLayout" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputUsername"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:textColorHint="?attr/colorOnTertiary"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:placeholderText="Insert your Username">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:imeActionLabel="Username"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textColor="?attr/colorOnTertiary" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.clerami.intermediate.ui.customview.MyButton
        android:id="@+id/register"
        android:layout_width="300dp"
        android:layout_height="68dp"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:fontFamily="@font/montserrat_bold"
        android:tag="register"
        android:text="@string/login_button_text_disabled"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputPasswordLayout"
        app:layout_constraintVertical_bias="0.2"
        app:textLogin="Log In"
        app:textRegister="Sign Up" />


    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/already_have_an_account_login"


        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:indicatorColor="?attr/colorOnSecondary"
        app:indicatorSize="12dp"
        app:layout_constraintTop_toBottomOf="@id/textInputPasswordLayout"
        app:layout_constraintVertical_bias="0.3"
        app:showAnimationBehavior="inward"
        app:trackColor="?attr/colorOnTertiary" />
</androidx.constraintlayout.widget.ConstraintLayout>