<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_four"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <!-- Text Welcome Back -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/masuk"

        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <!-- Box Text Input Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:hint="@string/masukan_email"
        app:boxBackgroundMode="outline"

        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/welcome_text"


        app:placeholderText="example@gmail.com">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="?attr/colorOnTertiary" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Box Text Input Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/masukan_password"
        app:boxBackgroundMode="outline"

        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="?attr/colorOnTertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:placeholderText="Create a Password">


        <com.clerami.intermediate.ui.customview.EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textColor="?attr/colorOnTertiary" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Tombol Login -->
    <com.clerami.intermediate.ui.customview.MyButton
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="68dp"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:fontFamily="@font/montserrat_bold"
        android:tag="login"
        android:text="@string/login_button_text_disabled"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputPasswordLayout"
        app:layout_constraintVertical_bias="0.2"
        app:textLogin="Log In"
        app:textRegister="Sign Up" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:indicatorColor="?attr/colorOnSecondary"
        app:indicatorSize="12dp"
        app:layout_constraintTop_toBottomOf="@id/textInputPasswordLayout"
        app:layout_constraintVertical_bias="0.3"
        app:showAnimationBehavior="inward"
        app:trackColor="?attr/colorOnTertiary" />


    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/dont_have_account_sign_up"


        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>